--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         width="40"
                         style="margin: -25px -10px -25px -20px"
                     />
-                    <h1 class="logo">&nbsp;ADVENTURE</h1></a
+                    <h1 class="logo">&nbsp;TRAVELYARI</h1></a
                 ></span
             >
             <ul class="nav-links">
@@ -327,25 +327,19 @@
         <!--footer-->
         <section class="footer">
             <span
-                >Created By Pritam Sarbajna | &#169; 2022 All rights
+                >Created By Vinit Mahant | &#169; 2024 All rights
                 reserved.</span
             >
             <div class="social">
                 <li>
                     <a
-                        href="https://pritam-sarbajna-portfolio.netlify.app/"
-                        target="_blank"
-                        rel="noreferrer"
-                        ><i class="fa fa-globe"></i
-                    ></a>
-                    <a
-                        href="https://github.com/PritamSarbajna"
+                        href="https://github.com/VinitMahant14"
                         target="_blank"
                         rel="noreferrer"
                         ><i class="fa fa-github"></i
                     ></a>
                     <a
-                        href="https://www.linkedin.com/in/pritam-sarbajna-74945821b/"
+                        href="https://www.linkedin.com/in/vinit-mahant-51702b26a"
                         target="_blank"
                         rel="noreferrer"
                         ><i class="fa fa-linkedin-square"></i
